Fixed card wrapping so there is equal spacing between each card and aligns with container elements. #1

--- a/css/layout.css
+++ b/css/layout.css
@@ -31,9 +31,24 @@
   align-items: center;
 }
 
+#country-deck {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.country-wrapper {
+  flex-basis: 50%;
+  padding: 0.6rem;
+}
+
 @media screen and (min-width: 760px) {
+  .country-wrapper {
+    flex-basis: calc(100% / 5);
+    padding: 0.6rem;
+  }
+
   .container {
-    max-width: 1000px;
+    max-width: 1200px;
   }
 
   #search {
